--- a/fcj-workshop-template-main/config.toml
+++ b/fcj-workshop-template-main/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://namisme2k4.github.io/aws-web/"
+baseURL = "https://namisme2k4.github.io/aws-web-page/"
 relativeURLs = true
 canonifyURLs = true
 
